# cf-ddns

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 73cnf2k7mji95fcflvay15pdw4skhhk5-source  pkk7hj8sv8d84lagfjxkmd9fhgqwl89y-source
nixosModule/: default.nix
src/: error.rs  main.rs
src/cli/: args.rs  mod.rs
src/http/: client.rs  mod.rs
