[package]
name = "cf-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"]}
